# swift-embedded-examples

./: .gitignore
.github/workflows/: build-nuttx.yml  build.nuttx.yml
nuttx-riscv-blink/: CMakeLists.txt  README.md
nuttx-riscv-blink/cmake/: riscv32.cmake
nuttx-riscv-blink/src/: BridgingHeader.h  Main.swift  main.cpp
